fix: Featured post image overlay on mobile.

--- a/assets/css/parts/single.css
+++ b/assets/css/parts/single.css
@@ -20,7 +20,7 @@
 
 .post-header-overlay {
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 200px 0;
+    height: 400px;
 }
 
 .entry-title {
